--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.15.2-31.2.27'
     compile 'org.spongepowered:mixin:0.8'
     annotationProcessor "org.spongepowered:mixin:0.8:processor"
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
