vscode runner & forge version update

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=8889
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=8889
