--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
-        maven { url = 'https://repo.spongepowered.org/repository/maven-public'}
+//        maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = "http://lss233.littleservice.cn/repositories/minecraft" }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
         maven { url = 'https://maven.aliyun.com/repository/public/' }
-        jcenter()
+//        jcenter()
         mavenCentral()
     }
     dependencies {
