damn stupid fmlat

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,1 @@
-public net.minecraft.entity.LivingEntity damageEntity(Lnet/minecraft/util/DamageSource;F)V # damageEntity
+public net.minecraft.entity.LivingEntity damageEntity(Lnet/minecraft/util/DamageSource;F)V
