--- a/gradle.properties
+++ b/gradle.properties
@@ -32,9 +32,9 @@ mapping_channel=official
 mapping_version=1.20.1
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=Micro_Machienry
+mod_id=micro_machienry
 # The human-readable display name for the mod.
-mod_name=micro_machienry
+mod_name=Micro_Machienry
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
