--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ loader_version_range=[47,)
 mapping_channel=parchment
 mapping_version=1.19.3-2023.03.12-1.20.1
 
-mod_id=micro_machienry
-mod_name=Micro Machienry
+mod_id=micro_machinery
+mod_name=Micro Machinery
 mod_license=MIT
 mod_version=1.0-SNAPSHOT
 mod_group_id=org.mfrf
