--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ forge_version=47.0.1
 forge_version_range=[47,)
 loader_version_range=[47,)
 mapping_channel=parchment
-mapping_version=1.19.3-2023.03.12-1.20.1
+mapping_version=2023.09.03-1.20.1
 
 mod_id=micro_machinery
 mod_name=Micro Machinery
